--- a/vignettes/Case studies/x2CaseStudyChitosan.Rmd
+++ b/vignettes/Case studies/x2CaseStudyChitosan.Rmd
@@ -8,7 +8,8 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-
+knitr::knit_meta()
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Initiation
@@ -17,7 +18,7 @@ We assume you have the input data for a substance or material of interest and al
 
 ```{r}
 library(dplyr)
-#substance <-  "GO-Chitosan"
+substance <-  "GO-Chitosan"
 source("baseScripts/initWorld_onlyParticulate.R")
 World$fetchData("RhoS")
 World$fetchData("RadS")
@@ -49,7 +50,7 @@ We need the following properties for the GO-Chitosan related particles:
 
 : The density of GO-chitosan is approximated by 7/8 \* dens_Graphene + 1/8 \* dens_Chitosan
 
-```{r}
+```{r Computing Raduius}
 
 # Longest <- World$fetchData("Longest_side")
 # Intermediate <- World$fetchData("Intermediate_side")
@@ -97,26 +98,30 @@ log_uniform_samples <- 10^runif(n, min = log10(ma_min), max = log10(ma_max))
 marine_alpha_mean_log_samples <- mean(log_uniform_samples)
 print(marine_alpha_mean_log_samples)
 
-#Assign data
-World$fetchData("alpha")
-subcomparts <- c("river", "lake", "water", "agriculturalsoil", "naturalsoil", "othersoil", "freshwatersediment", "lakesediment")
-alpha_adjust_fw <- list(
-  alpha = data.frame(
-    SubCompart = subcomparts, 
-    alpha = fw_alpha_mean_log_samples
-  )
-)
-
-World$mutateVars(alpha_adjust_fw)
-
 subcompartsmarine <- c("sea", "marinesediment", "freshwatersediment", "deepocean")
-alpha_adjust_marine <- list(
-  alpha = data.frame(
-  SubCompart = subcompartsmarine, 
-  alpha = marine_alpha_mean_log_samples
-  )
-)
-World$mutateVars(alpha_adjust_marine)
+
+
+subcomparts <- c("river", "lake", "water", "agriculturalsoil", "naturalsoil", "othersoil", "freshwatersediment", "lakesediment")
+all_subcomparts <- c(subcomparts, subcompartsmarine)
+species <- rep(c("Large", "Small"), times = length(all_subcomparts))
+
+alpha = data.frame(
+SubCompart = c(subcomparts,subcompartsmarine),  
+Species = species,
+alpha = c(fw_alpha_mean_log_samples, marine_alpha_mean_log_samples))
+
+World$fetchData("alpha")
+ToPaste <- lapply(list(alpha), function(x) {
+  varName <- names(x)[!names(x) %in% The3D]
+  stopifnot(length(varName)==1)
+  # one line with 2 disadvantages of tidyverse..:
+  as.data.frame(pivot_longer(data = x, cols = all_of(varName), names_to = "varName", values_to = "Waarde"))
+})
+
+dfs <- do.call(bind_rows, ToPaste)
+
+World$mutateVars(dfs)
+
 World$UpdateKaas(mergeExisting = F)
 World$fetchData("alpha")
 
@@ -124,58 +129,6 @@ World$fetchData("alpha")
 
 ```
 
-## Adjusting Parameters to Match considered Scale
-
-In this case study we are considering emission data only for Europe. By default the 'World' is represented by a nested regional scale, which is not relevant for the current assessment using emissions data only for Europe. Here we use the option to allocate part of the emissions to the regional scale based on the fraction of surface area in order to mimic not having a nested scale. In future one would be interested for instance in including a local or national scale as well. One could adjust the regional scale for this purpose.
-
-The code is commented out, but this is an example of adjusting the regional scale to represent Switzerland. You can only adjust parameters that are initial input data, not variables that are calculated later in SBOO. The adjusted dataframes are printed below. Note, at this point the input is already converted to SI units, so new data also needs to be put in this format.
-
-```{r}
-# 
-# LandFRAC <- data.frame(
-#   Scale = "Regional",
-#   SubCompart = c("agriculturalsoil", "lake", "naturalsoil", "othersoil" , "river"), 
-#   landFRAC = c(0.37, 0.02, 0.51, 0.08, 0.02)
-# )
-# # TotalArea <- data.frame(
-# #   Scale = c("Arctic", "Continental", "Moderate", "Regional"),
-# #   TotalArea = c(4.25E+13, 7.43E+12, 8.50E+13, 4.13e+11)
-# # )
-# 
-# Temperature <- data.frame(
-#   Scale = "Regional", 
-#   Temp = 279
-# )
-# 
-# RAINrate <- data.frame(
-#   Scale = "Arctic",
-#   RAINrate = 4.37e-5
-# )
-# 
-# ParamToAdjust <- list(LandFRAC, Temperature, RAINrate)
-# for (i in seq_along(ParamToAdjust)) {
-#   ParamToAdjust[[i]] <- World$mutateVar(ParamToAdjust[[i]])
-# }
-# print(ParamToAdjust)
-
-## scaling of world 
-
-Area <- World$fetchData("TotalArea")
-AreaRegional <- Area$TotalArea[Area$Scale =="Regional"]
-AreaContinental <- Area$TotalArea[Area$Scale =="Continental"]
-fracReg <- AreaRegional/AreaContinental
-fracCont <- 1-fracReg
-
-FracRC <- tibble(
-  Scale_SBname = c("Regional","Continental"),
-  Abr_scale = c("R","C"),
-  AreaFraction = c(fracReg,fracCont)
-)
-
-
-print(FracRC)
-
-```
 
 ## NewSolver
 
@@ -220,9 +173,9 @@ Now we are ready to run the solver, which results in the mass in each compartmen
 
 ```{r}
 Solution <- World$Solve(emissions)
-print(Solution)
 Solution <- Solution |>
   filter(Species != "Unbound")
+print(Solution)
 #Solution <- World$SolutionAsRelational(Solution)
 ```
 
@@ -251,7 +204,9 @@ ggplot(MassFractions, aes(x = Scale, y = MassFraction, fill = Species)) +
 
 ```
 We are also interested in concentrations per compartment. For this, we need to ensure that we convert the Equilibrium Mass into the Equilibrium concentration, which we will do below. We need to adjust the concentrations to end up in respective units. We convert concentrations in soil and sediment to g/kg wet weight. Concentrations in water are in grams/L. In air, concentrations are in kg/kg air. 
-```{r}
+```{r Output Table}
+library(knitr)
+library(kableExtra)
 # Fetch necessary data
 Volume <- World$fetchData("Volume")
 Area <- World$fetchData("Area")
@@ -306,22 +261,39 @@ Concentration_eq[Concentration_eq$SubCompart %in% subcomparts, "Concentration"] 
 
 # Print or return the updated Concentration_eq dataframe
 print(Concentration_eq)
-
-library(knitr)
-library(kableExtra)
-subcompart <- c("agriculturalsoil", "naturalsoil", "othersoil", "freshwatersediment", "marinesediment", 
-                "air", "deepocean", "river", "sea", "cloudwater")
+subcompart <- c("agriculturalsoil", "naturalsoil", "othersoil", "freshwatersediment", "marinesediment",  "lakesediment", "air", "deepocean", "lake" , "river", "sea", "cloudwater")
 units <- c("g/kg w", "g/kg w", "g/kg w", "g/kg w", "g/kg w", "g/kg w",
-           "kg/kg", "g/L", "g/L", "g/L", "g/L")
+           "kg/kg", "g/L", "g/L", "g/L", "g/L", "g/L", "g/L")
 
 # Combine into a named list
 subcompart_units <- setNames(units, subcompart)
+
+
 Concentration_eq <- Concentration_eq |>
   mutate(Units_per_SubCompart = subcompart_units[SubCompart])
 
+convert_units <- function(concentration, unit) {
+  if (unit == "g/kg w") {
+    return(concentration * 1e9)
+  } else if (unit == "kg/kg") {
+    return(concentration * 1e12)
+  } else if (unit == "g/L") {
+    return(concentration * 1e9)
+  } else {
+    return(concentration)
+  }
+}
+
+# Convert concentrations to ng/kg or ng/L and update units
+Concentration_eq <- Concentration_eq |>
+  mutate(
+         Concentration = mapply(convert_units, Concentration, Units_per_SubCompart),
+         Units_per_SubCompart = ifelse(Units_per_SubCompart == "g/kg w", "ng/kg w", 
+                                       ifelse(Units_per_SubCompart == "kg/kg", "ng/kg", "ng/L")))
+Concentration_eq$Concentration <- format(Concentration_eq$Concentration, scientific = TRUE)
+# Create the table with kable and style it with kableExtra
 kable(Concentration_eq, format = "markdown", align = "c", caption = "Concentration per Compartment") |>
   kable_styling(full_width = T)
-  kableExtra::kableExtraOptions(digits = 4, format = "markdown")
 
 
 ```
@@ -330,9 +302,63 @@ kable(Concentration_eq, format = "markdown", align = "c", caption = "Concentrati
 
 ## SBdynamic
 
+## Adjusting Parameters to Match considered Scale
+
+In this case study we are considering emission data only for Europe. By default the 'World' is represented by a nested regional scale, which is not relevant for the current assessment using emissions data only for Europe. Here we use the option to allocate part of the emissions to the regional scale based on the fraction of surface area in order to mimic not having a nested scale. In future one would be interested for instance in including a local or national scale as well. One could adjust the regional scale for this purpose.
+
+The code is commented out, but this is an example of adjusting the regional scale to represent Switzerland. You can only adjust parameters that are initial input data, not variables that are calculated later in SBOO. The adjusted dataframes are printed below. Note, at this point the input is already converted to SI units, so new data also needs to be put in this format.
+
+```{r Scaling, include=FALSE}
+# 
+# LandFRAC <- data.frame(
+#   Scale = "Regional",
+#   SubCompart = c("agriculturalsoil", "lake", "naturalsoil", "othersoil" , "river"), 
+#   landFRAC = c(0.37, 0.02, 0.51, 0.08, 0.02)
+# )
+# # TotalArea <- data.frame(
+# #   Scale = c("Arctic", "Continental", "Moderate", "Regional"),
+# #   TotalArea = c(4.25E+13, 7.43E+12, 8.50E+13, 4.13e+11)
+# # )
+# 
+# Temperature <- data.frame(
+#   Scale = "Regional", 
+#   Temp = 279
+# )
+# 
+# RAINrate <- data.frame(
+#   Scale = "Arctic",
+#   RAINrate = 4.37e-5
+# )
+# 
+# ParamToAdjust <- list(LandFRAC, Temperature, RAINrate)
+# for (i in seq_along(ParamToAdjust)) {
+#   ParamToAdjust[[i]] <- World$mutateVar(ParamToAdjust[[i]])
+# }
+# print(ParamToAdjust)
+
+## scaling of world 
+
+Area <- World$fetchData("TotalArea")
+AreaRegional <- Area$TotalArea[Area$Scale =="Regional"]
+AreaContinental <- Area$TotalArea[Area$Scale =="Continental"]
+fracReg <- AreaRegional/AreaContinental
+fracCont <- 1-fracReg
+
+FracRC <- tibble(
+  Scale_SBname = c("Regional","Continental"),
+  Abr_scale = c("R","C"),
+  AreaFraction = c(fracReg,fracCont)
+)
+
+
+print(FracRC)
+
+```
+
+
 We can also solve the differential equations dynamically in time, but the optimal implementation is still work in progress, see [issue](https://github.com/rivm-syso/SBoo/issues/111).
 
-```{r emission data}
+```{r emission data, include=FALSE}
 file_paths <- 
   list.files("data/emissions",recursive = TRUE)
 Emissions <-
@@ -347,7 +373,7 @@ Data from an DPMFA model should be prepared to fit the SBoo world. For instance 
 
 We define the compartments of the emission based on the DMPFA model.
 
-```{r Emissions}
+```{r Emissions, include=FALSE}
 # TODO: solve for every RUN
 Emissions <- 
   Emissions |>
@@ -382,7 +408,7 @@ Emissions <-
 
 When running for only GO or only Chitosan, you want to correct for the fact that it's partly Chitosan and partly GO through using the densities.
 
-```{r DensityScaling}
+```{r DensityScaling, include=FALSE}
 
 Weightfactor <- switch(substance,
                        "GO-Chitosan" = 1,
@@ -401,7 +427,7 @@ head(Emissions)
 
 In this chunk, we adjust for the fact that the input data for the DMPFA model is all Europe based. Hence we scale by the factor fracReg and fracCont to still include the current regional scale (could alse be done differently). The regional data is thus a portion of the EU emission, scaled based on the land surface area.
 
-```{r ScaleScaling}
+```{r ScaleScaling, include=FALSE}
 
 SBEmissions2 <- 
   Emissions |> mutate(
@@ -441,7 +467,7 @@ head(SBEmissions2)
 
 ### make time dependant emission functions
 
-```{r approxfuns}
+```{r approxfuns, include=FALSE}
 SBEmissions3 <- 
   SBEmissions2 |> 
   mutate(time_s = year*(365.25*24*60*60)+(365.25*24*60*60)) |> ungroup() |> 
@@ -481,7 +507,7 @@ curve(PlotEmisFun,
 
 The chunk below gives the opportunity to Solve for constant input data. The chunk after that gives the opportunity to also vary SB Input data
 
-```{r DynamicSolve}
+```{r DynamicSolve, include=FALSE}
 
 ##ODE
 
@@ -569,7 +595,7 @@ plot(Solution$time,Solution$aCS)
 
 To move from the solution of the ODE solver to usable output data we need to split the output into corresponding mass data per compartment over time and emission signals over time. The first chunk is for one output, the latter chunk for varying input or emission data.
 
-```{r Output Processing one solution}
+```{r Output Processing one solution, include=FALSE}
 library(dplyr)
 #for one Solution
 Solution <- as.data.frame(Solution)
@@ -658,7 +684,7 @@ A$time <- compartments$time
 
 Below you can create a plot for one output for mass, the chunk after that represents uncertainty based on multiple outputs.
 
-```{r plotting}
+```{r plotting, include=FALSE}
 # Define the plot_dataframe function
 plot_dataframe <- function(df, title) {
   data_to_plot <- tidyr::gather(df, key = "variable", value = "value", -time)
@@ -715,7 +741,7 @@ ggplot(s2C, aes(x = time)) +
 
 ##From mass to concentration 
 In this chunk we will convert the mass output into concentration output by calculating the respective volumes and calculating by this value. 
-```{r mass to concentration}
+```{r mass to concentration, include=FALSE}
 # Fetch necessary data
 Volume <- World$fetchData("Volume")
 Area <- World$fetchData("Area")
@@ -833,7 +859,7 @@ legend("topright", legend = c("s2CA", "s2CP", "s2CS"), col = c("blue", "red", "g
 ##Plotting Of Concentrations
 Here we append all concentrations per compartment for species A, S and P. Subsequently, we plot these results
 
-```{r Concentrations Plotting}
+```{r Concentrations Plotting, include=FALSE}
 summed_columns <- list()
 
 # Loop through each column and sum values of columns with the same prefix (removing the last letter)
